syntax = "proto3";

package chat;

service ChatService {
  rpc Chat (stream ChatMessage) returns (stream ChatMessage) {}
}

message ChatMessage {
  string message = 1;
  string action = 2;
}
